Fixing the chat to be in the bottom with the scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -3,18 +3,29 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html {
+    height:100%;
+    width: 100%;
+}
 body {
     font: 13px Helvetica, Arial;
     background: #FFFBE6;
+    height:100%;
+    width:100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding-bottom: 40px;
+    overflow: hidden;
 }
 
 form {
     background: #9CAE37;
     padding: 3px;
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     width: 100%;
+    height:40px;
 }
 
 form input {
@@ -29,65 +40,104 @@ form button {
     background: #D1E466;
     border: none;
     padding: 10px;
+    border-radius: 5px;
 }
 
+#chat-title {
+    z-index: 1;
+    background: #7FD2BF;
+    padding: 25px 25px 35px 25px;
+    font-family: 'Sansita';
+    font-size: 42px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px #E2FBF5;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    color: #12886E;
+    height:80px;
+    margin-top:-80px;
+}
+#messages-container {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: relative;
+    width: 100%;
+    height:100%;
+    display: inline-block;
+}
 #messages {
     list-style-type: none;
-    margin: 0; padding: 0;
-    width: 70%;
-    display: inline-block;
-    float: left;
-    position: fixed;
-
+    margin: 0;
+    padding: 0;
+    width:100%;
     bottom: 0;
-    padding-bottom: 40px;
-
-    overflow: auto;
+    /*position: absolute;*/
+    /*z-index:-1;*/
 }
 
 
 #message-container {
-    position: relative;
+    /*position: relative;*/
+    padding-top: 80px;
+    width:70%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline-block;
+    height:100%;
 }
 
 #messages li {
     padding: 5px 10px;
     background: #FFFBE6;
+    font-family: 'Sniglet';
+    font-size: 16px;
 }
 
 #user-list li {
-    color: #F4B8DB;
+    color: #98E0D0;
     padding: 3px;
-    font-size: 16px;
+    font-size: 18px;
     text-align: right;
     display: block;
+    font-family: 'Walter Turncoat';
+    font-weight: bold;
 }
 #messages li:nth-child(odd) { background: #FFF9D3; }
 
 #user-list {
+    padding-top: 20px;
     list-style-type: none;
 }
 
 #users-connected {
     background-color: #470E4B;
     /*background-color: #8E2D66;*/
-    width: 29.5%;
+    width: 30%;
     display: inline-block;
     float: right;
-    padding: 10px;
+    padding: 15px;
+    padding-bottom: 25px;
     height: 100%;
-    bottom: 0;
-    position: fixed;
-    right: 0;
+    /*bottom: 0;*/
+    /*position: fixed;*/
+    /*right: 0;*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 
 }
 
 .users-title {
     color: #C97BCE;
+    font-family: 'Sansita';
     font-weight: bold;
     font-size: 36px;
-    opacity: 0.5;
+    opacity: 0.8;
     line-height: 80%;
     text-align: right;
     display: block;
+
+}
+
+#you {
+    color: #FFF09A;
+    border-bottom: 3px #FFF09A dashed;
 }
